--- a/bs.css
+++ b/bs.css
@@ -20,6 +20,13 @@
     background-size: cover;
 }
 
+.bgi3{
+    background-image: url(pic/services-2.jpg);
+
+    background-size: cover;
+}
+
+
 .rb{
     border-radius: 20px;
 }
@@ -31,7 +38,12 @@
 .boxs{
     box-shadow: 10px 5px 5px black;
 }
-
+.ml{
+    margin-left: 140px;
+}
+.ml1{
+    margin-left: -40px;
+}
 @media (max-width:700px)
 {
     .h1{
@@ -43,6 +55,9 @@
         background-attachment:scroll;
         background-size: cover;
     }
-    
+
+    .ml1{
+        margin-left: 10px;
+    }
 
 }
